fixes spacing on links in dashboard header bar

--- a/app/assets/stylesheets/dashboard/_dashboard.sass
+++ b/app/assets/stylesheets/dashboard/_dashboard.sass
@@ -4,16 +4,18 @@
     +shadow(0px 0px 10px lighten($black, 70%))
     background: white
     border-bottom: 1px solid #d7d7d9
-    height: 50px
+    height: 55px
     width: 100%
     .header-new-goal
         float: left
-        margin: 7px 25px
-        padding: 7px 15px
+        margin: 10px 20px
     .header-goal, .logout-link
         float: left
-        padding: 14px 25px
-        height: 50px
+        padding: 0 20px
+        line-height: 55px
+    .logout-link
+        float: right
+        color: $black
     .header-goal
         border-left: 1px solid #d7d7d9
         border-right: 1px solid #d7d7d9
@@ -21,17 +23,14 @@
         +transform(translateX(-50%))
         position: absolute
         left: 50%
-        top: 15px
+        top: 17px
         height: 22px
-    .logout-link
-        float: right
-        color: $black
 
 // COMMON CLASSES
 
 #dash
     #center-wrap
-        padding: 20px 25px
+        padding: 20px
 
 .panel
     background: #1e2b34
