--- a/app/assets/stylesheets/partials/_forms.sass
+++ b/app/assets/stylesheets/partials/_forms.sass
@@ -49,6 +49,9 @@ button, a.button, input[type="submit"]
         &:hover
             background-color: #2A68A5
             color: #FFF
+    &.small
+        font-size: .85rem
+        padding: 6px 10px
 
 // FORMS
 
